--- a/refs.bib
+++ b/refs.bib
@@ -2569,3 +2569,88 @@ url="http://dx.doi.org/10.1007/11546207_1"
   doi = {10.5220/0006733106710679},
   url = {http://www.scitepress.org/DigitalLibrary/Link.aspx?doi=10.5220/0006733106710679},
 }
+@InProceedings{just1,
+author="Kalyanpur, Aditya
+and Parsia, Bijan
+and Horridge, Matthew
+and Sirin, Evren",
+editor="Aberer, Karl
+and Choi, Key-Sun
+and Noy, Natasha
+and Allemang, Dean
+and Lee, Kyung-Il
+and Nixon, Lyndon
+and Golbeck, Jennifer
+and Mika, Peter
+and Maynard, Diana
+and Mizoguchi, Riichiro
+and Schreiber, Guus
+and Cudr{\'e}-Mauroux, Philippe",
+title="Finding All Justifications of OWL DL Entailments",
+booktitle="The Semantic Web",
+year="2007",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="267--280",
+abstract="Finding the justifications of an entailment (that is, all the minimal set of axioms sufficient to produce an entailment) has emerged as a key inference service for the Web Ontology Language (OWL). Justifications are essential for debugging unsatisfiable classes and contradictions. The availability of justifications as explanations of entailments improves the understandability of large and complex ontologies. In this paper, we present several algorithms for computing all the justifications of an entailment in an OWL-DL Ontology and show, by an empirical evaluation, that even a reasoner independent approach works well on real ontologies.",
+isbn="978-3-540-76298-0"
+}
+@InProceedings{just2,
+author="Suntisrivaraporn, Boontawee
+and Qi, Guilin
+and Ji, Qiu
+and Haase, Peter",
+editor="Domingue, John
+and Anutariya, Chutiporn",
+title="A Modularization-Based Approach to Finding All Justifications for OWL DL Entailments",
+booktitle="The Semantic Web",
+year="2008",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="1--15",
+abstract="Finding the justifications for an entailment (i.e., minimal sets of axioms responsible for it) is a prominent reasoning service in ontology engineering, as justifications facilitate important tasks like debugging inconsistencies or undesired subsumption. Though several algorithms for finding all justifications exist, issues concerning efficiency and scalability remain a challenge due to the sheer size of real-life ontologies. In this paper, we propose a novel method for finding all justifications in OWL DL ontologies by limiting the search space to smaller modules. To this end, we show that so-called locality-based modules cover all axioms in the justifications. We present empirical results that demonstrate an improvement of several orders of magnitude in efficiency and scalability of finding all justifications in OWL DL ontologies.",
+isbn="978-3-540-89704-0"
+}
+@inproceedings{owlproof2old,
+  title={Explanation in DL-Lite.},
+  author={Borgida, Alexander and Calvanese, Diego and Rodriguez-Muro, Mariano},
+  year={2008}
+}
+@InProceedings{owlproof2,
+author="Borgida, Alexander
+and Calvanese, Diego
+and Rodriguez-Muro, Mariano",
+editor="Meersman, Robert
+and Tari, Zahir",
+title="Explanation in the DL-Lite Family of Description Logics",
+booktitle="On the Move to Meaningful Internet Systems: OTM 2008",
+year="2008",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="1440--1457",
+abstract="In ontology-based data access (OBDA), access to (multiple) incomplete data sources is mediated by a conceptual layer constituted by an ontology. In such a setting, to correctly compute answers to queries, it is necessary to perform complex reasoning over the constraints expressed by the ontology. We consider the case of ontologies expressed in DL{\thinspace}−{\thinspace}Lite, a family of DLs that, in the context of OBDA, provide an optimal tradeoff between expressive power and computational complexity of reasoning; notably conjunctive query answering is LOGSPACE in the size of the data. However, query answering with reasoning comes at a price: the justification of the presence of tuples in answers is no longer trivial, and requires explanation. In this paper, we characterize reasoning in DL{\thinspace}−{\thinspace}Lite, through deduction rules for building proofs, and we provide several novel contributions: (i) For standard ontology level reasoning, explanation is relatively simple, and our contribution comes mainly from a novel focus on brevity of proofs. (ii) Motivated by the use of DL{\thinspace}−{\thinspace}Lite for OBDA, we analyze and provide explanation for reasoning in finite models. (iii) We provide a facility for the explanation of an answer to a conjunctive query over a DL{\thinspace}−{\thinspace}Lite ontology. This algorithm is able to exploit the relational query engine to extract from the data the information necessary for finding the explanation more efficiently, and thus scales to large data sets. The presented approach has been implemented in a prototype for constructing explanations.",
+isbn="978-3-540-88873-4"
+}
+
+
+@InProceedings{owlproof,
+author="Horridge, Matthew
+and Parsia, Bijan
+and Sattler, Ulrike",
+editor="Patel-Schneider, Peter F.
+and Pan, Yue
+and Hitzler, Pascal
+and Mika, Peter
+and Zhang, Lei
+and Pan, Jeff Z.
+and Horrocks, Ian
+and Glimm, Birte",
+title="Justification Oriented Proofs in OWL",
+booktitle="The Semantic Web -- ISWC 2010",
+year="2010",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="354--369",
+abstract="Justifications --- that is, minimal entailing subsets of an ontology --- are currently the dominant form of explanation provided by ontology engineering environments, especially those focused on the Web Ontology Language (OWL). Despite this, there are naturally occurring justifications that can be very difficult to understand. In essence, justifications are merely the premises of a proof and, as such, do not articulate the (often non-obvious) reasoning which connect those premises with the conclusion. This paper presents justification oriented proofs as a potential solution to this problem.",
+isbn="978-3-642-17746-0"
+}
