proof chaper almost finished

--- a/main.tex
+++ b/main.tex
@@ -786,11 +786,7 @@ This chapter was partly based on the publications:
 %\section{A Proof Calculus for N3}
 \input{chapters/Proofs/proofs}
 
-Say that rule-producing rules are not covered by the calculs. Rules as data vs rules as applicable steps.
-
-In OWL, you normally express explanations, these are small sets of axioms from which new knowledge follows.
-
-
+\clearpage
 \newpage
 This chapter was partly based on the publications:
 \vspace{0.3cm}
@@ -801,7 +797,7 @@ This chapter was partly based on the publications:
 
 \bibentry{arndt_ruleml_2015}
 
-\chapter{Applications of proofs}\label{restdesc}
+\chapter{Applications of proofs: Adaptive planning}\label{restdesc}
 %\input{chapters/Proofs/proofcalculus}
 %\section{Applications of Proofs}
 %\input{chapters/Proofs/PP}
@@ -814,6 +810,7 @@ This chapter was partly based on the publications:
 \section{Limits of the apporach}
 \input{chapters/Proofs/conclusion}
 
+\clearpage
 \newpage
 This chapter was partly based on the publications:
 \vspace{0.3cm}
@@ -835,7 +832,7 @@ This chapter was partly based on the publications:
 \chapter{Conclusions}\label{concl}\label{conclusion}
 \section{Review of the research questions}
 \section{Open challenges and future directions}
-
+Define proof vocabulary which reflect the reasoning steps performed by the reasoners.
 
 %\afterpage{\null\blankpage}
 
