--- a/refs.bib
+++ b/refs.bib
@@ -2521,6 +2521,7 @@ url="http://dx.doi.org/10.1007/11546207_1"
   author = {Arndt, D\"orthe and Schrijvers, Tom and De Roo, Jos and Verborgh, Ruben},
   journal = {Journal of Web Semantics},
   year = 2019,
+  doi = {10.1016/j.websem.2019.04.001},
 }
 @inproceedings{arndt_rulemlrr_2017,
   author = {Arndt, D\"orthe and De Meester, Ben and Dimou, Anastasia and Verborgh, Ruben and Mannens, Erik},
@@ -2653,4 +2654,24 @@ address="Berlin, Heidelberg",
 pages="354--369",
 abstract="Justifications --- that is, minimal entailing subsets of an ontology --- are currently the dominant form of explanation provided by ontology engineering environments, especially those focused on the Web Ontology Language (OWL). Despite this, there are naturally occurring justifications that can be very difficult to understand. In essence, justifications are merely the premises of a proof and, as such, do not articulate the (often non-obvious) reasoning which connect those premises with the conclusion. This paper presents justification oriented proofs as a potential solution to this problem.",
 isbn="978-3-642-17746-0"
+}
+@article{Baget,
+  title = {On rules with existential variables: Walking the decidability line},
+  author = {Jean-François Baget and Michel Leclère and Marie-Laure Mugnier and Eric Salvat},
+  journal = {Artificial Intelligence},
+  volume = {175},
+  number = {9--10},
+  pages = {1620--1654},
+  year = {2011},
+  issn = {0004-3702},
+  doi = {http://dx.doi.org/10.1016/j.artint.2011.03.002},
+  url = {http://www.sciencedirect.com/science/article/pii/S0004370211000397},
+}
+@incollection{datalogpm,
+  title={Datalog+/-: A family of languages for ontology querying},
+  author={Cal{\`\i}, Andrea and Gottlob, Georg and Lukasiewicz, Thomas and Pieris, Andreas},
+  booktitle={Datalog Reloaded},
+  pages={351--368},
+  year={2011},
+  publisher={Springer}
 }
