--- a/refs.bib
+++ b/refs.bib
@@ -2675,3 +2675,12 @@ isbn="978-3-642-17746-0"
   year={2011},
   publisher={Springer}
 }
+@phdthesis{verborgh_phd_2014,
+  title = {Serendipitous Web Applications through~Semantic Hypermedia},
+  author = {Verborgh, Ruben},
+  year = 2014,
+  month = feb,
+  school = {Ghent University},
+  address = {Ghent, Belgium},
+  url = {https://ruben.verborgh.org/phd/},
+}
