more pragmatic proof

--- a/dankwoord.tex
+++ b/dankwoord.tex
@@ -9,7 +9,9 @@
 \epigraph{\textit{Mit Mathematikern ist kein heiteres Verhältnis zu gewinnen.}}{Johann Wolfgang von Goethe}
 
 Taking up the quote from above, I thank everyone who tried nevertheless, 
-especially  Miel, Jos, Ruben, Pieter Pauwels, Agfa etc.
+especially  Miel, Jos, Ruben, Tom, Pieter Pauwels, Femke, Agfa etc.
+
+I also thank Stefanie Michael for encouraging me to start this journey, without her I would never have applied for my PhD position. 
 
 
 \vspace*{\fill}
