--- a/main.tex
+++ b/main.tex
@@ -597,7 +597,7 @@ citecolor = black]{hyperref} % make links
 %\bibliographystyle{unsrtnat} 
 
 \begin{document}		
-    \nobibliography*
+\nobibliography*
 \frontmatter
 
     % front page %
@@ -695,7 +695,7 @@ citecolor = black]{hyperref} % make links
 \input{chapters/N3/RDF}
 \section{Logics with implicit quantification}
 \input{chapters/N3/RW-ImplicitQuantification}
-
+\input{chapters/N3/conclusion_iq}
 
 \newpage
 This chapter was partly based on the publications:
@@ -708,7 +708,7 @@ This chapter was partly based on the publications:
 \bibentry{arndt_ruleml_2015}
 
 
-\input{chapters/N3/N3Core}\label{ela}
+\input{chapters/N3/N3Core} %\label{ela}
 %\chapter{Mapping to Core Logic}
 \input{chapters/N3/Mapping}
 \input{chapters/N3/RelatedWork}
@@ -805,9 +805,7 @@ This chapter was partly based on the publications:
 %\chapter{Applications of proofs}
 %\section{Proofs in Use: RESTdesc}
 \input{chapters/Proofs/pragmatic-proof}
-\section{Limits of the apporach}\label{sec:limits}
-Here I want to explain that it is difficult to express change in RESTdesc and that we cannot generate more than on path. Maybe I also want to mention that the reasoner
-in some cases only stops if we apply specific strategies.
+\input{chapters/Proofs/limits}
 \section{Extending the RESTdesc idea: SENSdesc}\label{sec:sensdesc}
 \input{chapters/Proofs/sensdesc}
 \input{chapters/Proofs/conclusion}
@@ -823,7 +821,7 @@ This chapter was partly based on the publications:
 
 \bibentry{sensdesc}
 
-
+\input{chapters/Conclusion/conclusion}
 
 
 % \chapter{Going beyond: modeling change}
@@ -831,30 +829,6 @@ This chapter was partly based on the publications:
 % not sure whether or not I have time to write this section. If not I should write a journal after the PhD.
 
 
-\chapter{Conclusions}\label{concl}\label{conclusion}
-\section{Review of the research questions}
-I want to go through the research questions one by one:
-
-We showed clear ways to define the semantics of \nthree, the decision which specification we want to use depends on the community (here I want to also talk about our W3C community group)
-
-We also clarified the relation of \nthree and \rdf: \nthree is compatible with \rdf and truely extends it. 
-
-\nthree can be used for ontology reasoning and querying. But practice also needs to show whether we encounter practical cases where we get problems.
-
-\nthree supports the layer of proof and makes this layer part of the semantic web (here I am currently considering to change the requirement in that direction). Proofs should not only be 
-producible, the produced proofs should also be part of the web and therefore again have a strong connection to \rdf.
-
-We also showed  practical applications for proofs.
-
-
-\section{Open challenges and future directions}
-Define proof vocabulary which reflect the reasoning steps performed by the reasoners.
-
-Work of the community group.
-
-Further investigate the ontology reasoning.
-
-Go beyond RESTdesc (here I want to mention or at least give a hint that we had GPS4IC).
 
 %\afterpage{\null\blankpage}
 
