--- a/main.tex
+++ b/main.tex
@@ -713,6 +713,7 @@ This chapter was partly based on the publications:
 \input{chapters/N3/Mapping}
 \input{chapters/N3/RelatedWork}
 \input{chapters/N3/RW-Mapping}
+\input{chapters/N3/conclusion_core}
 \newpage
 This chapter was partly based on the publications:
 \vspace{0.5cm}
