--- a/summary.tex
+++ b/summary.tex
@@ -75,7 +75,8 @@ the proof can be easily adapted. We define the concrete format to describe Web A
 the termination of our algorithm. We furthermore discuss its limits and extend the idea of using proofs as plans to another use case.
 
 In conclusion the research conducted for this thesis shows that N3 Logic is indeed a very promising candidate to become the \emph{Unifying Logic} of the Semantic Web:
-N3 is an extension of RDF, the most important standard of the Web -- it is able to support reasoning over ontologies and taxonomies and querying, and it supports the layer
-of proof by not only providing proofs but also by making it possible to represent these in the logic itself. Our research has also shown that it is possible 
-to formalise the semantics of N3 is a way that it is compatible with RDF. To really define this formalisation the Semantic Web community needs to 
-come to an agreement on how to interpret implicit universal quantification in N3. We hope that this thesis provides a valuable step towards this agreement.
+N3 is an extension of RDF, it supports reasoning over ontologies/taxonomies, querying and rule-based inferencing, and it supports the layer
+of proof: N3 reasoners do not only provide proofs, N3 is even expressive enough to allow the reasoner to represent such proofs in the logic itself. 
+The research has shown that it is possible 
+to formalise the semantics of N3 is a way that it is compatible with RDF. For a standardised formalisation the Semantic Web community needs to 
+come to an agreement on how to interpret implicit universal quantification. We hope that this thesis provides a valuable step towards this agreement.
