first part conclusion

--- a/summary.tex
+++ b/summary.tex
@@ -56,7 +56,7 @@ to simply follow the interpretation of EYE, since it is easier to implement and 
 Having discussed the Semantics of \nthree and its relation to RDF, we next focus on the tasks which can be performed by using N3. In order to know 
 whether N3 can solve the same practical problems as OWL DL reasoning and SPARQL querying with a comparable performance, we considered two use cases: a semantic nurse call 
 system and a system to perform RDF-validation. Both use cases have been implemented previously by applying OWL DL reasoning and/or SPARQL querying.
-We approached both use cases by applying rule-based reasoning instead. Our resulting systems were able to provide the same functionality as the original ones.
+We approached both use cases by applying \nthree instead. Our resulting systems were able to provide the same functionality as the original ones.
 The performance of our nurse call system was faster in all cases.  
 The RDF-validation system was faster for datasets below 100,000 triples. We can thus conclude that the implementations deliver comparable results.
 
